--- a/wizard/cotacao_view.xml
+++ b/wizard/cotacao_view.xml
@@ -6,24 +6,29 @@
         <field name="arch" type="xml">
             <form>
                 <group>
-                    <field name="partner_id"/>
+                    <field name="partner_id" attrs="{'readonly':[('produtos_cotados','!=',[])]}"/>
                     <field name="partner_street" attrs="{'invisible':[('partner_id','=',False)]}"/>
                     <field name="partner_zip" attrs="{'invisible':[('partner_id','=',False)]}"/>
                     <field name="partner_city" attrs="{'invisible':[('partner_id','=',False)]}"/>
                     <field name="partner_route_id" attrs="{'invisible':[('partner_route_id','=',False)]}"/>
                     <field name="data_vencimento"/>
-                    <field name="desejado_id"/>
-                    <field name="qnt_desejado" invisible="True"/>
+                    <field name="desejado_id" options="{'no_create': True, 'no_create_edit':True, 'no_open':True}"/><!---->
+                    <field name="qnt_desejado" invisible="True" />
                     <button string="Mostrar" name="carregaproduto" type="object" attrs="{'invisible':[('desejado_id','=',False)]}"/>
                     <field name="alternativo_ids" invisible="True"/>
-                    <field name="alternativo" attrs="{'invisible':['|',('qnt_desejado','>',0),('desejado_id','=',False)]}" widget="many2many_tags"/>
+                    <field name="alternativo" attrs="{'invisible':['|',('qnt_desejado','>',0),('desejado_id','=',False)],'required':[('qnt_desejado','&lt;',1)]}" widget="many2many_tags"/>
                     <field name="acessorio_ids" invisible="True"/>
                     <field name="acessorio" attrs="{'invisible':[('desejado_id','=',False)]}"/>
-                    <field name="produtos_cotados"/>
+                    <field name="produtos_cotados" readonly="True">
+                        <tree>
+                            <field name="name"/>
+                            <field name="lst_price"/>
+                            <field name="product_template_attribute_value_ids" widget="many2many_tags"/>
+                        </tree>
+                    </field>
                 </group>
                 <footer>
-    <!--                <button string="Criar" name="" type="object"/>-->
-    <!--                <button string="Descartar" special="cancel"/>-->
+                    <button string="Criar Cotação" name="cria_cotacao_reg" type="object" attrs="{'invisible':[('produtos_cotados','=',[])]}"/>
                 </footer>
             </form>
         </field>
