--- a/views/product_product_list_inherit_view.xml
+++ b/views/product_product_list_inherit_view.xml
@@ -16,4 +16,14 @@
             </field>
         </field>
     </record>
+<!--    <record id="product_product_inherited_form_view" model="ir.ui.view">-->
+<!--        <field name="name">PPF</field>-->
+<!--        <field name="model">product.product</field>-->
+<!--        <field name="inherit_id" ref="product.product_normal_form_view"/>-->
+<!--        <field name="arch" type="xml">-->
+<!--            <field name="type" position="after">-->
+<!--                <field name="a_cotar"/>-->
+<!--            </field>-->
+<!--        </field>-->
+<!--    </record>-->
 </odoo>
