--- a/wizard/cotacao_view.xml
+++ b/wizard/cotacao_view.xml
@@ -14,18 +14,19 @@
                     <field name="partner_route_id" attrs="{'invisible':[('partner_route_id','=',False)]}"/>
                     <label for="desejado_id"/>
                     <div class="o_row">
-                        <field name="desejado_id" options="{'no_create': True, 'no_create_edit':True, 'no_open':True}"/>
+                        <field name="desejado_id" options="{'no_create': True, 'no_create_edit':True, 'no_open':True}"
+                               context="{'tree_view_ref': 'cotacao.product_search_more'}"/>
                         <button name="carregaproduto" type="object" string="Mostrar" attrs="{'invisible':[('desejado_id','=',False)]}"/>
                     </div>
                     <field name="qnt_desejado" invisible="True" />
-                    <!--<field name="alternativo_ids" invisible="True"/>
-                    <field name="alternativo" attrs="{'invisible':['|',('qnt_desejado','>',0),('desejado_id','=',False)],'required':[('qnt_desejado','&lt;',1)]}" options="{'no_create': True, 'no_create_edit':True, 'no_open':True}"/>-->
-                    <field name="produtos_cotados" readonly="True">
-                        <tree> <!--decoration-danger="gambiarra = False" decoration-success="gambiarra = True"-->
-                            <field name="name" widget="badge" /> <!--attrs="{'decoration-danger':[('gambiarra','=',False)],'decoration-success':[('gambiarra','=',False)]}"-->
-                            <field name="lst_price"/>
-                            <field name="product_template_attribute_value_ids" widget="many2many_tags"/>
-                            <field name="qty_available"/>
+                    <field name="qnt_a_levar" attrs="{'invisible':[('desejado_id','=',False)]}"/>
+                    <field name="produtos_cotados" attrs="{'invisible':[('produtos_cotados','=',[])]}">
+                        <tree editable="True"> <!--decoration-danger="gambiarra = False" decoration-success="gambiarra = True"-->
+                            <field name="name" widget="badge" readonly="True"/> <!--attrs="{'decoration-danger':[('gambiarra','=',False)],'decoration-success':[('gambiarra','=',False)]}"-->
+                            <field name="lst_price" readonly="True"/>
+                            <field name="product_template_attribute_value_ids" widget="many2many_tags" readonly="True"/>
+                            <field name="qty_available" readonly="True"/>
+                            <field name="qnt_a_levar"/>
                         </tree>
                     </field>
                 </group>
@@ -42,4 +43,15 @@
         <field name="target">new</field>
     </record>
     <menuitem id="cotacao_sub_menu" action="cotacao_action" name="Cotação" parent="sale.sale_order_menu"/>
+    <record id="product_search_more" model="ir.ui.view">
+        <field name="name">Product Product Search More</field>
+        <field name="model">product.product</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="default_code"/>
+                <field name="name"/>
+                <field name="product_template_attribute_value_ids" widget="many2many_tags"/>
+            </tree>
+        </field>
+    </record>
 </odoo>
