--- a/wizard/carrega_produto_view.xml
+++ b/wizard/carrega_produto_view.xml
@@ -9,14 +9,15 @@
                     <field name="desejado_id"/>
                     <field name="type"/>
                     <field name="barcode"/>
-                    <field name="qnt_desejado" force_save="1"/>
+                    <field name="qnt_desejado" invisible="1"/>
                     <field name="produtos_cotados" invisible="True"/>
-                    <field name="qnt_a_levar" force_save="1"/>
-<!--                    <field name="bool" invisible="True"/>-->
+                </group>
+                <group>
+                    <field name="img" widget="image" string="Foto do Produto"/>
                 </group>
                 <footer>
-                    <button string="Ver Preço" name="cotar_acessorio" type="object" /><!--attrs="{'invisible':[('bool','=',True)]}"-->
-                    <button string="Ver Preço Sem Estoque" name="cotar_sem_estoque" type="object" />
+                    <button string="Ver Preço" name="cotar_acessorio" type="object" attrs="{'invisible':[('qnt_desejado','&lt;',1)]}"/>
+                    <button string="Ver Preço Sem Estoque" name="cotar_sem_estoque" type="object" attrs="{'invisible':[('qnt_desejado','>',0)]}"/>
                     <button name="naocotar" string="Fechar" type="object" />
                 </footer>
             </form>
