--- a/wizard/carrega_alternativo_view.xml
+++ b/wizard/carrega_alternativo_view.xml
@@ -1,30 +1,26 @@
-<?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
     <record id="carrega_alternativo_form_view" model="ir.ui.view">
-        <field name="name">Produto Desejado</field>
+        <field name="name">Carrega Alternativo</field>
         <field name="model">carrega.alternativo</field>
         <field name="arch" type="xml">
             <form>
                 <group>
+                    <field name="partner_id"/>
+                    <field name="data_vencimento"/>
                     <field name="desejado_id"/>
-                    <field name="desejado_tmpl_id" invisible="True"/>
-                    <h6>O produto desejado atualmente se encontra fora de estoque.</h6><br></br>
-                    <h6> Por favor, selecione um alternativo!</h6>
+                    <field name="produtos_cotados"/>
+                    <field name="variante"/>
+                    <field name="alternativo_ids"/>
                     <field name="alternativo"/>
-                    <field name="qnt_desejado" invisible="True"/>
-                    <field name="produtos_cotados" invisible="True"/>
-                    <field name="acessorio_ids" invisible="True"/>
-                    <field name="acessorio" string="Produtos Acessórios" attrs="{'invisible':[('qnt_desejado','&lt;',1)]}"/>
                 </group>
                 <footer>
-                    <button string="Ver Preço" name="cotar_acessorio_alternativo" type="object"/>
-                    <button name="nao_cotar_alt" string="Fechar" type="object"/>
+<!--                    -->
                 </footer>
             </form>
         </field>
     </record>
-    <record id="carrega_alternativo_action" model="ir.actions.act_window">
-        <field name="name">Produto Desejado</field>
+    <record id="alternativo_action" model="ir.actions.act_window">
+        <field name="name">Alternativo</field>
         <field name="res_model">carrega.alternativo</field>
         <field name="view_mode">form</field>
         <field name="target">new</field>
