--- a/wizard/carrega_produto_view.xml
+++ b/wizard/carrega_produto_view.xml
@@ -6,18 +6,20 @@
         <field name="arch" type="xml">
             <form>
                 <group>
-                    <field name="desejado_id"/>
-                    <field name="type"/>
-                    <field name="barcode"/>
-                    <field name="qnt_desejado" invisible="1"/>
-                    <field name="produtos_cotados" invisible="True"/>
-                </group>
-                <group>
-                    <field name="img" widget="image" string="Foto do Produto"/>
+                    <group>
+                        <field name="desejado_id"/>
+                        <field name="type"/>
+                        <field name="barcode"/>
+                        <field name="qnt_desejado" invisible="1"/>
+                        <field name="produtos_cotados" invisible="True"/>
+                    </group>
+                    <group>
+                        <field name="img" widget="image" nolabel="1" width="200px" />
+                    </group>
                 </group>
                 <footer>
                     <button string="Ver Preço" name="cotar_acessorio" type="object" attrs="{'invisible':[('qnt_desejado','&lt;',1)]}"/>
-                    <button string="Ver Preço Sem Estoque" name="cotar_sem_estoque" type="object" attrs="{'invisible':[('qnt_desejado','>',0)]}"/>
+                    <button string="Ver Preço" name="cotar_sem_estoque" type="object" attrs="{'invisible':[('qnt_desejado','>',0)]}"/>
                     <button name="naocotar" string="Fechar" type="object" />
                 </footer>
             </form>
