--- a/wizard/cotacao_view.xml
+++ b/wizard/cotacao_view.xml
@@ -6,7 +6,7 @@
         <field name="arch" type="xml">
             <form>
                 <group>
-                    <field name="partner_id" attrs="{'readonly':[('produtos_cotados','!=',[])]}"/>
+                    <field name="partner_id" attrs="{'readonly':[('produtos_cotados','!=',[])]}" options="{'no_create': True, 'no_create_edit':True, 'no_open':True}"/>
                     <field name="partner_street" attrs="{'invisible':[('partner_id','=',False)]}"/>
                     <field name="partner_zip" attrs="{'invisible':[('partner_id','=',False)]}"/>
                     <field name="partner_city" attrs="{'invisible':[('partner_id','=',False)]}"/>
@@ -20,7 +20,7 @@
                     </div>
                     <field name="qnt_desejado" invisible="True" />
                     <field name="produtos_cotados" attrs="{'invisible':[('produtos_cotados','=',[])]}">
-                        <tree editable="True"> <!--decoration-danger="gambiarra = False" decoration-success="gambiarra = True"-->
+                        <tree editable="True" > <!--decoration-danger="gambiarra = False" decoration-success="gambiarra = True"-->
                             <field name="name" widget="badge" readonly="True"/> <!--attrs="{'decoration-danger':[('gambiarra','=',False)],'decoration-success':[('gambiarra','=',False)]}"-->
                             <field name="standard_price" readonly="True"/>
                             <field name="product_template_attribute_value_ids" widget="many2many_tags" readonly="True"/>
