--- a/views/cotacao_view.xml
+++ b/views/cotacao_view.xml
@@ -6,7 +6,7 @@
         <field name="arch" type="xml">
             <form>
                 <group>
-                    <field name="partner_id" attrs="{'readonly':[('produtos_cotados','!=',[])]}" options="{'no_create': True, 'no_create_edit':True, 'no_open':True}"/>
+                    <field name="partner_id" attrs="{'readonly':[('prod_cot_id','!=',[])]}" options="{'no_create': True, 'no_create_edit':True, 'no_open':True}"/>
                     <field name="partner_street" attrs="{'invisible':[('partner_id','=',False)]}"/>
                     <field name="partner_zip" attrs="{'invisible':[('partner_id','=',False)]}"/>
                     <field name="partner_city" attrs="{'invisible':[('partner_id','=',False)]}"/>
@@ -16,31 +16,50 @@
                     <div class="o_row">
                         <field name="desejado_id" options="{'no_create': True, 'no_create_edit':True, 'no_open':True}"
                                context="{'tree_view_ref': 'cotacao.product_search_more'}"/>
+                        <div style="max-width:50px">
+                        <field name="quantidade_a_levar" widget="integer"/>
+                        </div>
                         <button name="carregaproduto" type="object" string="Mostrar" attrs="{'invisible':[('desejado_id','=',False)]}"/>
                     </div>
                     <field name="qnt_desejado" invisible="True" />
                     <field name="produtos_cotados" attrs="{'invisible':[('produtos_cotados','=',[])]}">
-                        <tree editable="True" > <!--decoration-danger="gambiarra = False" decoration-success="gambiarra = True"-->
+                        <tree editable="True"> <!--decoration-danger="gambiarra = False" decoration-success="gambiarra = True"-->
                             <field name="name" widget="badge" readonly="True"/> <!--attrs="{'decoration-danger':[('gambiarra','=',False)],'decoration-success':[('gambiarra','=',False)]}"-->
                             <field name="standard_price" readonly="True"/>
                             <field name="product_template_attribute_value_ids" widget="many2many_tags" readonly="True"/>
                             <field name="qty_available" readonly="True"/>
                         </tree>
                     </field>
+                    <field name="prod_cot_id">
+                        <tree editable="True">
+                            <field name="quantidade_a_levar"/>
+                            <field name="product_id" options="{'no_create': True, 'no_create_edit':True, 'no_open':True}"/>
+                            <field name="custo"/>
+                        </tree>
+                    </field>
                 </group>
-                <footer>
-                    <button string="Criar Cotação" name="cria_cotacao_reg" type="object" attrs="{'invisible':[('produtos_cotados','=',[])]}"/>
-                </footer>
+<!--                <footer>-->
+<!--                    <button string="Criar Cotação" name="cria_cotacao_reg" type="object" attrs="{'invisible':[('prod_cot_id','=',[])]}"/>-->
+<!--                </footer>-->
             </form>
+        </field>
+    </record>
+    <record id="cotacao_list_view" model="ir.ui.view">
+        <field name="name">Cotação</field>
+        <field name="model">cotacao</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="partner_id"/>
+            </tree>
         </field>
     </record>
     <record id="cotacao_action" model="ir.actions.act_window">
         <field name="name">Cotacao</field>
         <field name="res_model">cotacao</field>
-        <field name="view_mode">form</field>
-        <field name="target">new</field>
+        <field name="view_mode">tree,form</field>
+        <field name="target">current</field>
     </record>
-    <menuitem id="cotacao_sub_menu" action="cotacao_action" name="Cotação" parent="sale.sale_order_menu"/>
+    <menuitem id="cotacao_view_sub_menu" action="cotacao_action" name="Cotação" parent="sale.sale_order_menu"/>
     <record id="product_search_more" model="ir.ui.view">
         <field name="name">Product Product Search More</field>
         <field name="model">product.product</field>
