--- a/wizard/carrega_variante_view.xml
+++ b/wizard/carrega_variante_view.xml
@@ -14,10 +14,13 @@
                     <center><h6>Por favor, selecione uma variante do produto!</h6></center>
                     <field name="variante" options="{'no_create': True, 'no_create_edit': True, 'no_open': True}"
                     context="{'tree_view_ref': 'cotacao.product_search_more'}"/>
+                    <field name="qnt_variante" invisible="True"/>
                     <center><h6 attrs="{'invisible':[('int','=',2)]}" class="text-danger">Não há variantes em estoque, selecione um produto alternativo!</h6></center>
                     <field name="alternativo_ids" invisible="True"/>
                     <field name="alternativo" options="{'no_create': True, 'no_create_edit': True, 'no_open': True}" context="{'tree_view_ref': 'cotacao.product_search_more'}"
                     attrs="{'invisible':[('int','=',2)]}"/>
+                    <field name="qnt_alternativo" attrs="{'invisible':[('alternativo','=',False)]}"/>
+                    <field name="a_levar" attrs="{'invisible':[('variante','=',False),('alternativo','=',False)]}"/>
                     <field name="acessorio_alt_ids" invisible="True"/>
                     <field name="acessorio_alt" options="{'no_create': True, 'no_create_edit': True, 'no_open': True}" context="{'tree_view_ref': 'cotacao.product_search_more'}"
                     attrs="{'invisible':[('alternativo','=',False)]}" string="Produtos Acessórios"/>
@@ -28,9 +31,8 @@
                     context="{'tree_view_ref': 'cotacao.product_search_more'}" options="{'no_create': True, 'no_create_edit': True, 'no_open': True}"/>
                 </group>
                 <footer>
-                    <button string="Concluir" name="cotar_acessorio_variante" type="object" attrs="{'invisible':[('int','=',1)]}"/>
-                    <button string="Concluir" name="carrega_alternativo" type="object" attrs="{'invisible':[('int','=',2)]}"/>
-                    <button name="nao_cotar_variante" string="Fechar" type="object"/>
+                    <button string="Concluir" name="cotar_acessorio_variante" type="object"/>
+                    <button special="cancel" string="Fechar" type="object"/>
                 </footer>
             </form>
         </field>
