--- a/views/cotacao_view.xml
+++ b/views/cotacao_view.xml
@@ -54,9 +54,11 @@
                                 <field name="pre_pedido"/>
                             </tree>
                         </field>
+                        <field name="cotacoes" attrs="{'invisible':[('partner_id','=',False)]}" options="{'no_create': True, 'no_create_edit':True}"/>
                     </group>
                     <footer>
                         <button string="Criar Pré Pedido" name="cria_pre_pedido" type="object" attrs="{'invisible':['|',('prod_cot_id','=',[]),('int','=',10)]}" class="btn btn-primary"/>
+                        <button string="Mostrar Pré Pedido" name="abre_pre_pedido" type="object" attrs="{'invisible':['|',('prod_cot_id','=',[]),('int','!=',10)]}" class="btn btn-primary"/>
                     </footer>
                 </sheet>
             </form>
