--- a/views/cotacao_view.xml
+++ b/views/cotacao_view.xml
@@ -34,27 +34,24 @@
                             <field name="quantidade_a_levar" widget="integer"/>
                             </div>
                             <button id="botao" name="carregaproduto" type="object" string="Mostrar" attrs="{'invisible':[('desejado_id','=',False)]}"/>
-
                         </div>
                         <field name="qnt_desejado" invisible="True" />
-                        <field name="produtos_cotados" attrs="{'invisible':[('produtos_cotados','=',[])]}">
-                            <tree editable="True"> <!--decoration-danger="gambiarra = False" decoration-success="gambiarra = True"-->
-                                <field name="name" widget="badge" readonly="True"/> <!--attrs="{'decoration-danger':[('gambiarra','=',False)],'decoration-success':[('gambiarra','=',False)]}"-->
-                                <field name="standard_price" readonly="True"/>
-                                <field name="product_template_attribute_value_ids" widget="many2many_tags" readonly="True"/>
-                                <field name="qty_available" readonly="True"/>
-                            </tree>
-                        </field>
                         <field name="prod_cot_id" options="{'no_create': True, 'no_create_edit':True, 'no_open':True}">
-                            <tree>
-                                <field name="quantidade_a_levar" readonly="True"/>
+                            <tree editable="True">
+                                <field name="quantidade_a_levar"/>
                                 <field name="product_id" options="{'no_create': True, 'no_create_edit':True, 'no_open':True}" readonly="True"/>
                                 <field name="custo" readonly="True"/>
                                 <field name="qty_available" readonly="True"/>
-                                <field name="pre_pedido"/>
+                                <field name="pre_pedido" readonly="True"/>
+                                <field name="valor_total" readonly="True" sum="Valor da cotação"/>
                             </tree>
                         </field>
-                        <field name="cotacoes" attrs="{'invisible':[('partner_id','=',False)]}" options="{'no_create': True, 'no_create_edit':True}"/>
+                        <field name="cotacoes" attrs="{'invisible':[('partner_id','=',False)]}" options="{'no_create': True, 'no_create_edit':True}">                            <tree>
+                                <field name="partner_id"/>
+                                <field name="prod_cot_id" widget="many2many_tags"/>
+                                <field name="data_vencimento"/>
+                            </tree>
+                        </field>
                     </group>
                     <footer>
                         <button string="Criar Pré Pedido" name="cria_pre_pedido" type="object" attrs="{'invisible':['|',('prod_cot_id','=',[]),('int','=',10)]}" class="btn btn-primary"/>
