--- a/views/produtos_cotados_view.xml
+++ b/views/produtos_cotados_view.xml
@@ -22,6 +22,7 @@
                     <field name="product_id"/>
                     <field name="custo"/>
                     <field name="cotacao_id"/>
+                    <field name="valor_total"/>
                 </group>
             </form>
         </field>
